ajustes nos templates. Sem errros de compilação. Falta ajustar testes.